--- a/resources/css/scss/_overrides.scss
+++ b/resources/css/scss/_overrides.scss
@@ -3750,7 +3750,7 @@ div.k-grid-norecords {
 */
 .k-tabstrip-wrapper {
 	display: flex;
-	flex: 1;
+	// flex: 1;
 }
 /*
 * ------------------------------
