--- a/resources/css/index_bp.css
+++ b/resources/css/index_bp.css
@@ -1057,6 +1057,19 @@ button {
   width: 100% !important;
 }
 
+.text-full {
+  flex: 1;
+}
+
+.text-blue {
+  color: #0e4194;
+}
+
+.point {
+  color: #0e4194;
+  font-weight: bold;
+}
+
 /* 
 * ------------------------------
 * badge
@@ -1101,6 +1114,22 @@ button {
   background-color: #ebebeb;
   border: 1px solid #d5d5d5;
   color: #777;
+}
+.badge.square {
+  font-size: 15px;
+  line-height: 26px;
+  letter-spacing: -0.75px;
+  height: 24px;
+  border-radius: 3px;
+}
+.badge.square > * + * {
+  margin-left: 8px;
+}
+.badge.square.gray {
+  border: 1px solid #efefef;
+  background: #efefef;
+  color: #555;
+  font-weight: 500;
 }
 
 /*
@@ -1192,6 +1221,25 @@ td .divide + .divide {
   border-radius: 50%;
   margin-top: -2px;
   background: #222;
+}
+
+.alert-title {
+  font-size: 15px;
+  line-height: 26px;
+  letter-spacing: -0.75px;
+  display: flex;
+  justify-content: center;
+  margin: 30px 0 10px;
+  line-height: 20px;
+  font-weight: 500;
+}
+.alert-title.sm {
+  font-size: 14px;
+  line-height: 26px;
+  letter-spacing: -0.7px;
+  margin: 0 0 10px;
+  font-weight: 400;
+  line-height: 20px;
 }
 
 /*
@@ -1434,6 +1482,13 @@ td .divide + .divide {
 .tab-control.border .tabpanel {
   padding-top: 20px;
 }
+.tab-control.border.search .tabpanel {
+  border: none;
+  padding: 0;
+}
+.tab-control.border.search .tabpanel .search-control + .table-set {
+  max-height: calc(100% - 78px);
+}
 
 .tab-menu .btn-box {
   position: absolute;
@@ -1526,6 +1581,7 @@ td .divide + .divide {
   order: 2;
   font-weight: 400;
   color: #666;
+  white-space: nowrap;
 }
 .status-banner.contract .count {
   font-size: 30px;
@@ -2012,13 +2068,6 @@ td .divide + .divide {
   letter-spacing: -0.7px;
   line-height: 23px;
 }
-.k-dialog .k-dialog-content.alert .point {
-  color: #0e4194;
-  font-weight: bold;
-}
-.k-dialog .k-dialog-content.xs {
-  width: 320px;
-}
 .k-dialog .k-dialog-content.sm {
   width: 480px;
 }
@@ -2035,12 +2084,24 @@ td .divide + .divide {
   outline: 0;
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: fixed;
   z-index: 10002;
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: transparent;
   border: 1px solid #555;
   overflow: hidden;
+}
+.k-window.k-dialog.no-header .k-dialog-content {
+  margin-top: -1px;
+}
+.k-window.k-dialog.no-header .content-group {
+  padding-top: 0;
+}
+.k-window.k-dialog.no-header .content-group .btn-box {
+  margin-top: 20px;
+}
+.k-window.k-dialog.no-header .k-button.k-dialog-close {
+  right: 12px;
 }
 .k-window.k-dialog .divide.full {
   margin: 0 -30px;
@@ -2065,6 +2126,9 @@ td .divide + .divide {
 }
 .k-window.k-dialog .k-dialog-titlebar .k-button {
   padding: 0;
+}
+.k-window.k-dialog .k-dialog-titlebar .badge {
+  margin-right: 35px;
 }
 .k-window.k-dialog .k-dialog-content {
   height: 100%;
@@ -2284,6 +2348,37 @@ td .form-box, th .form-box {
   min-width: 126px;
   max-width: 126px;
 }
+.table.table-bg-box.type2 .cell:nth-of-type(2) {
+  min-width: 190px;
+  max-width: 190px;
+}
+.table.table-bg-box.type2 .cell:nth-of-type(3) {
+  min-width: 200px;
+  max-width: 200px;
+}
+.table.table-bg-box.type2 .cell:nth-of-type(4) {
+  min-width: 160px;
+  max-width: 160px;
+}
+.table.table-bg-box.type2 .cell:nth-of-type(5) {
+  min-width: 10px;
+  max-width: 10px;
+}
+.table.table-bg-box.type2 .cell:nth-of-type(6) {
+  min-width: 160px;
+  max-width: 160px;
+}
+.table.table-bg-box.type2 .cell:nth-of-type(7) {
+  min-width: 200px;
+  max-width: 200px;
+}
+.table.table-bg-box.type2 .cell:nth-of-type(8) {
+  min-width: 126px;
+  max-width: 126px;
+}
+.table.table-bg-box .head .row {
+  padding: 0px 20px;
+}
 .table.table-bg-box .head .cell {
   font-size: 14px;
   line-height: 26px;
@@ -2303,6 +2398,9 @@ td .form-box, th .form-box {
   margin-top: 10px;
 }
 .table.table-bg-box .cell {
+  font-size: 14px;
+  line-height: 26px;
+  letter-spacing: -0.7px;
   flex: 1;
   display: flex;
   align-items: center;
@@ -2312,7 +2410,7 @@ td .form-box, th .form-box {
   flex: 1;
 }
 .table.table-bg-box .body .row {
-  padding: 10px 10px;
+  padding: 10px 20px;
   background-color: #efefef;
 }
 .table.table-bg-box .body .td {
@@ -2440,7 +2538,7 @@ td .form-box, th .form-box {
   align-items: center;
 }
 .form-group > * + * {
-  margin-left: 8px;
+  margin-left: 20px;
 }
 .form-group.col {
   flex-direction: column;
@@ -2518,6 +2616,9 @@ td .form-group.col > * + * {
   padding: 0;
   margin-right: 8px;
 }
+.k-dialog .search-control .form-set + .form-set {
+  margin-left: 12px;
+}
 .k-dialog .search-control + .table-content {
   margin-top: 20px;
 }
@@ -2531,6 +2632,13 @@ td .form-group.col > * + * {
   border: 1px solid #e4e4e4;
   overflow: hidden;
   flex: 0 0 auto;
+  flex-wrap: wrap;
+}
+.search-control .search-line {
+  display: flex;
+}
+.search-control .search-line + .search-line {
+  margin-top: 20px;
 }
 .search-control .label {
   font-size: 14px;
@@ -2584,6 +2692,9 @@ td .form-group.col > * + * {
   white-space: nowrap;
   font-weight: 500;
 }
+.search-control .h-checkbox + .h-checkbox {
+  margin-left: 20px;
+}
 .search-control .h-checkbox input[type=radio] + label {
   display: flex;
   align-items: center;
@@ -2591,7 +2702,6 @@ td .form-group.col > * + * {
 }
 .search-control .h-checkbox input[type=radio] + label:before {
   top: 50%;
-  margin-top: 9px;
 }
 
 /*
@@ -3401,6 +3511,11 @@ td .form-group.col > * + * {
 .k-button-group.multi .k-button + .k-button.k-state-active {
   margin-left: 0px;
   padding-left: 20px;
+}
+
+.center-box {
+  margin-top: 10px;
+  padding: 20px 0;
 }
 
 /*
@@ -7313,7 +7428,6 @@ div.k-grid-norecords {
 */
 .k-tabstrip-wrapper {
   display: flex;
-  flex: 1;
 }
 
 /*
