--- a/resources/css/scss/modules/_table.scss
+++ b/resources/css/scss/modules/_table.scss
@@ -97,15 +97,56 @@ td .form-box, th .form-box {
                 }
             }
         }
-        .head .cell {
-            @include font-size-sm;
-            height: 26px;
-            padding: 0px 10px;
-            padding-bottom: 6px;
-            background: $white;
-            justify-content: center;
-            color: $gray-5;
-            font-weight: 500;
+        &.type2 {
+            .cell {
+                &:first-child {
+                    // min-width: ;
+                    // max-width: ;
+                }
+                &:nth-of-type(2) {
+                    min-width: 190px;
+                    max-width: 190px;
+                }
+                &:nth-of-type(3) {
+                    min-width: 200px;
+                    max-width: 200px;
+                }
+                &:nth-of-type(4) {
+                    min-width: 160px;
+                    max-width: 160px;
+                }
+                &:nth-of-type(5) {
+                    min-width: 10px;
+                    max-width: 10px;
+                }
+                &:nth-of-type(6) {
+                    min-width: 160px;
+                    max-width: 160px;
+                }
+                &:nth-of-type(7) {
+                    min-width: 200px;
+                    max-width: 200px;
+                }
+                &:nth-of-type(8) {
+                    min-width: 126px;
+                    max-width: 126px;
+                }
+            }
+        }
+        .head {
+            .row {
+                padding: 0px 20px;
+            }
+            .cell {
+                @include font-size-sm;
+                height: 26px;
+                padding: 0px 10px;
+                padding-bottom: 6px;
+                background: $white;
+                justify-content: center;
+                color: $gray-5;
+                font-weight: 500;
+            }
         }
         .row {
             display: flex;
@@ -114,8 +155,8 @@ td .form-box, th .form-box {
             }
         }
         .cell {
+            @include font-size-sm;
             flex: 1;
-            // display: table-cell;
             display: flex;
             align-items: center;
             padding: 0 10px;
@@ -125,7 +166,7 @@ td .form-box, th .form-box {
         }
         .body {
             .row {
-                padding: 10px 10px;
+                padding: 10px 20px;
                 background-color: $gray-ef;
             }
        
